Test plugin dokka-android to simplify